--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
         figcaption {
             margin-top: 5px;
-            font-weight: bold;
+            font-size: 0.85em; /* Smaller font size */
+            font-weight: normal; /* No bold */
         }
     </style>
 </head>
@@ -52,7 +53,7 @@
             <div class="image-wrapper">
                 <figure>
                     <img src="cathedral.jpg_processed_no_sobel.jpg" alt="Cathedral Image">
-                    <figcaption>Green offset: [2, 5] and Red offset: [3, 12]</figcaption>
+                    <figcaption>Red offset: [3, 12] and Green offset: [2, 5]</figcaption>
                 </figure>
             </div>
         </div>
