test what this looks like

--- a/index.html
+++ b/index.html
@@ -57,15 +57,17 @@
 </head>
 <body>
     <div class="container">
-        <!-- Title -->
+        <h1> CS180 Project #1</h1>
+
+        <p> The goal of this project was to colorize the Prokudin-Gorskii images. We were given blue, green, and red images and our goal was to combine them to reproduce the color of the original image. There were also some images that were really large -- so it was necessary to implement an image pyramid to process these. In terms of my  </p>
+
         <div class="title">Images</div>
 
-        <!-- Image Rows -->
         <div class="row">
             <div class="image-wrapper">
                 <figure>
                     <img src="cathedral.jpg_processed_no_sobel.jpg" alt="Cathedral Image">
-                    <figcaption>Green offset: [2, 5] and Red offset: [3, 12]</figcaption>
+                    <figcaption>cathedral.jpg, red offset: [3, 12] and green offset: [2, 5]</figcaption>
                 </figure>
             </div>
         </div>
@@ -74,7 +76,7 @@
             <div class="image-wrapper">
                 <figure>
                     <img src="monastery.jpg_processed_no_sobel.jpg" alt="Monastery Image">
-                    <figcaption>Red offset: [2, 3] and Green offset: [2, -3]</figcaption>
+                    <figcaption>monastery.jpg, red offset: [2, 3] and green offset: [2, -3]</figcaption>
                 </figure>
             </div>
         </div>
