--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             margin: 0;
             flex-direction: column;
         }
@@ -18,6 +17,7 @@
         .container {
             width: 80%;
             text-align: center;
+            margin-bottom: 50px;
         }
 
         .title {
@@ -52,6 +52,14 @@
             margin-top: 5px;
             font-size: 0.85em; /* Smaller font size */
             font-weight: normal; /* No bold */
+        }
+
+        h1 {
+            margin-top: 20px;
+        }
+
+        p {
+            text-align: left;
         }
     </style>
 </head>
