--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
                 <figure>
                     <img src="emir.tif_processed_no_sobel.jpg" alt="Emir Image">
                     <figcaption>emir.tif with no sobel filtering, red offset: [-385, 154] and green offset: [24, 49]</figcaption>
+                </figure>
+            </div>
+        </div>
+
+        <div class="row"></div>
+            <div class="image-wrapper">
+                <figure>
                     <img src="emir.tif.jpg_processed.jpg" alt="Emir Image with Sobel Filtering">
                     <figcaption>emir.tif with sobel filtering, red offset: [40, 107] and green offset: [23, 49]</figcaption>
                 </figure>
