--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row"></div>
             <div class="image-wrapper">
                 <figure>
-                    <img src="emir.tif.jpg_processed.jpg" alt="Emir Image with Sobel Filtering">
+                    <img src="emir.tif_processed.jpg" alt="Emir Image with Sobel Filtering">
                     <figcaption>emir.tif with sobel filtering, red offset: [40, 107] and green offset: [23, 49]</figcaption>
                 </figure>
             </div>
