--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="row">
             <div class="image-wrapper">
                 <figure>
-                    <img src="emir.tif_processed_no_sobel.jpg" alt="Emir Image">
+                    <img src="emir_no_sobel.png" alt="Emir Image">
                     <figcaption>emir.tif with no sobel filtering, red offset: [-385, 154] and green offset: [24, 49]</figcaption>
                 </figure>
             </div>
