added images of my own

--- a/index.html
+++ b/index.html
@@ -197,6 +197,24 @@
                 </figure>
             </div>
         </div>
+
+        <div class="row"></div>
+            <div class="image-wrapper">
+                <figure>
+                    <img src="piony2.tif_processed_no_sobel.jpg" alt="Emir Image">
+                    <figcaption>piony.tif, red offset: [-6, 104] and green offset: [3, 51]</figcaption>
+                </figure>
+            </div>
+        </div>
+
+        <div class="row"></div>
+            <div class="image-wrapper">
+                <figure>
+                    <img src="lastochkino.tif_processed_no_sobel.jpg" alt="Emir Image">
+                    <figcaption>lastochkino.tif, red offset: [-8, 75] and green offset: [-2, -2]</figcaption>
+            </figure>
+            </div>
+        </div>
         
         <div class="container">
         <h1> Bells and Whistles </h1>
