--- a/index.html
+++ b/index.html
@@ -1,69 +1,26 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Grid</title>
+    <title>Google Doc Embed</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 0;
-            flex-direction: column;
+            height: 100vh;
+            background-color: #f4f4f4;
         }
-
-        .container {
+        iframe {
             width: 80%;
-            text-align: center;
-            margin-bottom: 50px;
-        }
-
-        .title {
-            font-size: 2em; /* Larger font size */
-            font-weight: bold; /* Bold text */
-            margin-bottom: 20px;
-        }
-
-        .row {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        .image-wrapper {
-            text-align: center;
-            margin: 0 20px;
-        }
-
-        img {
-            width: 200px;
-            height: auto;
-        }
-
-        figure {
-            display: inline-block;
-            margin: 0;
-            text-align: center;
-        }
-
-        figcaption {
-            margin-top: 5px;
-            font-size: 0.85em; /* Smaller font size */
-            font-weight: normal; /* No bold */
-        }
-
-        h1 {
-            margin-top: 20px;
-        }
-
-        p {
-            text-align: left;
+            height: 80%;
+            border: none;
         }
     </style>
 </head>
 <body>
-    <div style="text-align: center"><iframe src="https://docs.google.com/document/d/15vbcileDpIiuncNkTBFe6ZrFGlk0tFcFPSIq-AhFIjM/pub?embedded=true"></iframe></div>
+    <iframe src="https://docs.google.com/document/d/15vbcileDpIiuncNkTBFe6ZrFGlk0tFcFPSIq-AhFIjM/pub?embedded=true"></iframe>
 </body>
 </html>
