--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Gallery</title>
+    <title>CS180 Project 2</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,7 +41,9 @@
 </head>
 <body>
 
-    <h1>Image Gallery</h1>
+    <h1>CS180 Project 2</h1>
+
+    <p> In this project, our goal was to play around with filters and frequencies, learning more about Gaussian and Laplacian stacks, and learning how to do a lot of different cool things with images. My favorite part of the project was definitely the multiresolution blending -- it was so cool to see that code could do the kinds of things that professional graphic designers do (photoshopping and blending images together). It was a really exciting application for me! </p>
 
     <div class="image-container">
         <figure>
