--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="image-container"></div>
         <figure>
             <img src="mask.png" alt="Description of Image 3">
-            <figcaption>The binary mask.</figcaption>
+            <figcaption>The mask, a step function.</figcaption>
         </figure>
         <figure>
             <img src="oraple.png" alt="Description of Image 3">
