--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <h1>CS180 Project 2</h1>
 
-    <p> In this project, our goal was to play around with filters and frequencies, learning more about Gaussian and Laplacian stacks, and learning how to do a lot of different cool things with images. My favorite part of the project was definitely the multiresolution blending -- it was so cool to see that code could do the kinds of things that professional graphic designers do (photoshopping and blending images together). It was a really exciting application for me! </p>
+    <p> In this project, our goal was to play around with filters and frequencies, learning more about Gaussian and Laplacian stacks, and learning how to do a lot of different cool things with images. My favorite part of the project was definitely the multiresolution blending -- it was so cool to see that code could do the kinds of things that professional graphic designers do (photoshopping and blending images together). It was a really exciting application for me! The most important thing I learned was how to set up this blending, and how to see the different frequencies we can see far away and close up, as mentioned later, to manipulate the way that humans see images.</p>
 
     <div class="image-container">
         <figure>
