attempt to fix justify?

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             max-width: 600px;
             margin: 10px auto;
         }
+
+        body > p {
+            text-align: left; 
+            max-width: none; 
+            margin: 10px 0; 
+        }
     </style>
 </head>
 <body>
