another paragraph change

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             max-width: none; 
             margin: 10px 0; 
         }
+
+        .image-container p {
+            max-width: 800px; /* Adjust this value to change width */
+            margin: 10px auto; /* This centers the paragraph with some margin */
+        }
     </style>
 </head>
 <body>
