--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             height: auto;
             border: 2px solid #ddd;
             border-radius: 8px;
+            display: block; /* Ensures images are treated as block elements */
+            margin: 0 auto; /* Center the images */
         }
 
         figcaption {
@@ -33,20 +35,9 @@
         }
 
         p {
-            text-align: center;
-            max-width: 600px;
-            margin: 10px auto;
-        }
-
-        body > p {
-            text-align: left; 
-            max-width: none; 
-            margin: 10px 0; 
-        }
-
-        .image-container p {
+            text-align: left; /* Left justify paragraphs */
             max-width: 800px; /* Adjust this value to change width */
-            margin: 10px auto; /* This centers the paragraph with some margin */
+            margin: 10px auto; /* Center the paragraph with some margin */
         }
     </style>
 </head>
